--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "studio": "prisma studio"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/adapter-pg": "^6.1.0",
     "@prisma/client": "^6.1.0",
@@ -27,6 +28,7 @@
     "crypto-js": "^4.2.0",
     "lucide-react": "^0.468.0",
     "next": "15.1.2",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "pg": "^8.13.1",
     "prisma": "^6.1.0",
