--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
     "next": "15.1.2",
     "next-auth": "^4.24.11",
