--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/crypto-js": "^4.2.2",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/socket.io-client": "^1.4.36",
     "@types/ws": "^8.5.13",
     "bcryptjs": "^2.4.3",
@@ -36,6 +39,7 @@
     "express": "^4.21.2",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
+    "nanoid": "^5.0.9",
     "next": "15.1.2",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
@@ -44,8 +48,10 @@
     "prisma": "^6.1.0",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-colorful": "^5.6.1",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
     "socket.io": "^4.8.1",
@@ -58,9 +64,10 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
     "postcss": "^8",
